DesignProject/tests/error/error01_missing_semicolon.src
// Error test: Missing semicolon after assignment statement
// Expected: Syntax error - missing semicolon

func test() => integer {
  local x : integer;
  x := 5
  return (x);
}

